# c3pm_test_polynomial2

./: .gitignore  CMakeLists.txt  README.md  c3pm.json
src/: unittest_main.cpp
src/exports/: polynomial2.cpp  polynomial2.h
